--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<properties>
 		<spring.version>3.2.3.RELEASE</spring.version>
-		<cxf.version>2.2.3</cxf.version>
+		<cxf.version>2.7.3</cxf.version>
 	</properties>
 
 	<!-- Spring Dependencies -->
@@ -84,7 +84,13 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.13</version>
 		</dependency>
-            
+
+	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-jaxrs</artifactId>
+		<version>1.9.0</version>
+	</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -108,7 +114,6 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
 </project>
